--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <!-- Profile Card 1 -->
         <div id="voter" class="profile-card">
-            <img src="img/contestant001.jpg" alt="Profile 1" class="profile-image">
+            <img src="img/contestant001.JPG" alt="Profile 1" class="profile-image">
             <div class="hashtags">
                 <span>#ArabFashionCouncil</span>
             </div>
@@ -85,7 +85,7 @@
 
         <!-- Profile Card 2 -->
         <div id="voter" class="profile-card">
-            <img src="img/contestant002.jpg" alt="Profile 2" class="profile-image">
+            <img src="img/contestant002.JPG" alt="Profile 2" class="profile-image">
             <div class="hashtags">
                 <span>#DubaiFashionWeek</span>
             </div>
@@ -94,7 +94,7 @@
 
         <!-- Profile Card 3 -->
         <div id="voter" class="profile-card">
-            <img src="img/contestant003.jpg" alt="Profile 2" class="profile-image">
+            <img src="img/contestant003.JPG" alt="Profile 2" class="profile-image">
             <div class="hashtags">
                 <span>#ArabFashionInnovation</span>
             </div>
@@ -103,7 +103,7 @@
 
         <!-- Profile Card 4 -->
         <div id="voter" class="profile-card">
-            <img src="img/contestant004.jpg" alt="Profile 2" class="profile-image">
+            <img src="img/contestant004.JPG" alt="Profile 2" class="profile-image">
             <div class="hashtags">
                 <span>#Creativity</span>
             </div>
@@ -112,7 +112,7 @@
 
         <!-- Profile Card 5 -->
         <div id="voter" class="profile-card">
-            <img src="img/contestant005.jpg" alt="Profile 2" class="profile-image">
+            <img src="img/contestant005.JPG" alt="Profile 2" class="profile-image">
             <div class="hashtags">
                 <span>#ArabFashionHeritage</span>
             </div>
@@ -121,7 +121,7 @@
 
         <!-- Profile Card 6 -->
         <div id="voter" class="profile-card">
-            <img src="img/contestant006.jpg" alt="Profile 2" class="profile-image">
+            <img src="img/contestant006.JPG" alt="Profile 2" class="profile-image">
             <div class="hashtags">
                 <span>#CulturalCouture</span>
             </div>
@@ -130,7 +130,7 @@
 
         <!-- Profile Card 7 -->
         <div id="voter" class="profile-card">
-            <img src="img/contestant007.jpg" alt="Profile 2" class="profile-image">
+            <img src="img/contestant007.JPG" alt="Profile 2" class="profile-image">
             <div class="hashtags">
                 <span>#ArabFashionTrends</span>
             </div>
@@ -139,7 +139,7 @@
 
         <!-- Profile Card 8 -->
         <div id="voter" class="profile-card">
-            <img src="img/contestant008.jpg" alt="Profile 2" class="profile-image">
+            <img src="img/contestant008.JPG" alt="Profile 2" class="profile-image">
             <div class="hashtags">
                 <span>#ArabFashionista</span>
             </div>
